# cuda-spatial-filtering

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  apptainer.def  config.json  environment.yml  pulsar-fold.cu  start_tmux.sh  test_processor.cu
apps/: CMakeLists.txt  adaptive-beamformed-bandpass.cu  beamform_spatial.cpp  beamformed-bandpass.cu  bench_capture.cu  bench_gpu.cu  bench_processor.cu  bench_writers.cu  benchmark-20251030.cu  fft_antenna_spectra.cu  get_projection_matrix.cu  gpu_benchmark.cu  observe.cu  packet_processor.cpp  packet_processor_live.cpp  packet_processor_live.cu  pulsar-fold.cu  pulsar_fold.cu  read_pcap_and_beamform.cpp  read_pcap_file.cpp  test_cublas_complex.cpp  test_cutensor.cpp  test_cutensor_2.cpp  udp_sender.cpp
benchmarking/: plot_benchmarks.py  plot_profiles.py  run_benchmarks.sh  run_profile.sh
cmake/: FindCFITSIO.cmake  FindCasaCore.cmake  find_cutensor.cmake
include/spatial/: common.hpp  ethernet.hpp  libibverbs.hpp  logging.hpp  output.hpp  packet_formats.hpp  pinned_vector.hpp  pipeline.hpp  pipeline_base.hpp  pointing.hpp  spatial.cuh  spatial.hpp  tcc_config.h  tcc_config.h.in  tensor.hpp  writers.hpp
include/spatial/pipeline/: common.hpp  lambda_adaptive_beamformed_spectra_pipeline.hpp  lambda_antenna_spectra_pipeline.hpp  lambda_beamformed_spectra_pipeline.hpp  lambda_corr_beam_only_gpu_pipeline.hpp  lambda_gpu_pipeline.hpp  lambda_projection_pipeline.hpp  lambda_pulsar_fold_pipeline.hpp
prototyping/packet-processor/: processor.py
scripts/: README.md  Untitled.ipynb  adaptive_detection_reference.py  benchmark-requirements.txt  check_adaptive_detection_parity.py  correlate-pcap.ipynb  correlate-pcap.py  create_pcap.py  explore_metrics-Copy1.ipynb  explore_metrics.ipynb  mlflow_save_benchmarks.py  mlflow_save_benchmarks_2.py  read_visibilities.ipynb  read_visibilities.py
scripts/benchmark/: README.md  benchmark_plots.py  compare_benchmarks.py  run_benchmarks.py
scripts/eigenvector_work/: eigenvector_unpack.py
scripts/profiling/: ANALYSIS.md  README.md  analyze_output_timings.py  fast_udp_sender.c
scripts/validation/: validate_file.ipynb
src/: CMakeLists.txt  ethernet.cpp  packet_formats.cpp  pipeline.cpp  pointing.cpp  spatial.cpp  spatial.cu  tensor.cpp
tests/: CMakeLists.txt  TESTING.md  benchmark_processor.cu  benchmark_recv.cpp  test_adaptive_nulling_reference.py  test_adaptive_pipeline.cu  test_beamforming.cpp  test_corr_beam_pipeline.cu  test_folding.cu  test_incoherent_sum.cu  test_packet_formats.cpp  test_pipeline.cpp  test_pipeline.cu  test_pointing.cpp  test_processor.cpp  test_processor.cu  test_pulsar_fold.cu  test_spatial.cpp  test_writers.cpp
tests/support/: assertions.hpp  pipeline_harness.hpp  synthetic_packets.hpp  test_configs.hpp  test_harness_selftest.cu
ui/: pyproject.toml  ui.py
